add joingroup user api
